--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,1 +1,14 @@
-style.css
+body {
+    padding-top: 54px;
+}
+
+@media (min-width: 992px) {
+    body {
+        padding-top: 56px;
+    }
+}
+
+.card {
+    height: 100%;
+}
+
