--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,14 +1,15 @@
 body {
-    padding-top: 54px;
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-@media (min-width: 992px) {
-    body {
-        padding-top: 56px;
-    }
+.hero-spacer {
+    margin-top: 50px;
 }
 
-.card {
-    height: 100%;
+.hero-feature {
+    margin-bottom: 30px;
 }
 
+footer {
+    margin: 50px 0;
+}
