--- a/style/css/style.css
+++ b/style/css/style.css
@@ -25,6 +25,14 @@ footer {
 
 @media (max-width: 240px) {
 .navbar-header {
-    line-height: 0;
+    line-height: 21px;
+}
+    
+.navbar-brand {
+    float: none;
+    height: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 20px;
 }
     }
