--- a/style/css/style.css
+++ b/style/css/style.css
@@ -6,9 +6,13 @@ body {
     background: darkmagenta;
     color: #fff;
     height: 50px;
-    padding: 0px 0px;
+    padding: 0px 0px 0px 15px;
     font-size: 18px;
     line-height: 50px;
+}
+
+.navbar-brand {
+    float: none;
 }
 
 .hero-spacer {
@@ -34,5 +38,11 @@ footer {
     padding: 0;
     font-size: 18px;
     line-height: 20px;
-}
     }
+}
+
+@media (max-width: 767px) {
+.navbar-brand {
+    padding: 0;
+    }
+}
